remove some warnings from code analyser